tests/models/i8/fail/ge.rs
use dade::model;
#[model]
struct TestModel {
    #[field(ge = 2.0)]
    value: i8,
}
fn main() {}
